upgrade: Replace deprecated `clazz.newInstance()` call